Interfaz olvide mi contraseña (3) Modificaciones de los edit text de iniciar sesión y crear cuenta

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
             >
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="30dp"
-                android:layout_width="300dp"
+                android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 app:cardCornerRadius="30dp"
@@ -80,7 +80,7 @@
                         android:id="@+id/user"
                         android:inputType="textEmailAddress"
                         android:hint="Correo"
-                        android:layout_width="300dp"
+                        android:layout_width="350dp"
                         android:layout_height="wrap_content"
                         android:drawableLeft="@drawable/at"
                         android:drawablePadding="10dp"
@@ -92,7 +92,7 @@
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_marginTop="30dp"
-                android:layout_width="300dp"
+                android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 app:cardCornerRadius="30dp"
@@ -107,7 +107,7 @@
                         android:hint="Contraseña"
                         android:drawableLeft="@drawable/contra"
                         android:drawablePadding="10dp"
-                        android:layout_width="300dp"
+                        android:layout_width="350dp"
                         android:layout_height="wrap_content"
                         android:drawableTint="#018DFE"
                         android:background="@null"
@@ -121,7 +121,7 @@
                 android:orientation="horizontal"
                 android:gravity="end">
                 <Button
-                    android:id="@+id/forgotpswd"
+                    android:id="@+id/forgotPswd"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/transparent"
