--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,6 +137,7 @@
                 android:orientation="vertical"
                 android:layout_marginTop="50dp">
                 <Button
+                    android:id="@+id/iniciarSesion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#018DFE"
