--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profile">
+    tools:context=".ProfileFragment">
 
     <ImageButton
         android:id="@+id/changePhoto"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="300dp"
         android:background="@drawable/top_background" />
 
     <ImageView
@@ -18,18 +18,18 @@
         android:layout_height="150dp"
         android:background="@drawable/image_va"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="110dp"/>
+        android:layout_marginTop="50dp"/>
 
     <TextView
         android:id="@+id/textNombreApellido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre Apellido"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:fontFamily="sans-serif-black"
         android:textColor="@color/white"
-        android:layout_marginTop="150dp"
-        android:layout_marginLeft="180dp"/>
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="160dp"/>
 
     <TextView
         android:id="@+id/textEmail"
@@ -41,7 +41,7 @@
         android:textColor="@color/white"
         android:layout_below="@id/textNombreApellido"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="180dp"/>
+        android:layout_marginLeft="160dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="272dp"
+            android:layout_marginTop="200dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/bottom_background"
             android:elevation="5dp"
@@ -131,7 +131,7 @@
         android:textColor="#018DFE"
         android:layout_marginStart="-13dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="640dp"/>
+        android:layout_marginTop="550dp"/>
 
 
 </RelativeLayout>
