--- a/app/src/main/res/layout/activity_register_med.xml
+++ b/app/src/main/res/layout/activity_register_med.xml
@@ -35,7 +35,7 @@
              <ImageView
                  android:layout_width="150dp"
                  android:layout_height="150dp"
-                 android:src="@drawable/sinimagen"
+                 android:src="@drawable/sinimagenn"
                  android:id="@+id/sinImagen"
                  />
              <Button
