--- a/app/src/main/res/layout/activity_vermedicamento.xml
+++ b/app/src/main/res/layout/activity_vermedicamento.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/sinimagen"
+            android:src="@drawable/sinimagenn"
             />
         <Button
             android:backgroundTint="#018DFE"
