--- a/app/src/main/res/layout/activity_vermedicamento.xml
+++ b/app/src/main/res/layout/activity_vermedicamento.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical"
         >
         <ImageView
+            android:id="@+id/imagenEdit"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:src="@drawable/sinimagenn"
@@ -39,14 +40,7 @@
         android:hint="Nombre del Medicamento" />
 
     <EditText
-        android:id="@+id/dosisDiariaEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:hint="Dosis que tocan al día" />
-
-    <EditText
-        android:id="@+id/frecuenciaEditText"
+        android:id="@+id/TipoEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Tipo de Medicamento" />
@@ -72,6 +66,7 @@
         android:inputType="numberDecimal"
         android:hint="Precio Mercado"/>
    <LinearLayout
+       android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
@@ -79,10 +74,19 @@
        <Button
            android:backgroundTint="#018DFE"
 
-           android:id="@+id/guardarC"
+           android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guardar Cambios"
+           />
+       <Button
+           android:layout_marginLeft="10dp"
+           android:backgroundTint="#FE0000"
+
+           android:id="@+id/eliminar"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Eliminar"
            />
    </LinearLayout>
 
