--- a/app/src/main/res/layout/activity_crear_alarma.xml
+++ b/app/src/main/res/layout/activity_crear_alarma.xml
@@ -36,58 +36,7 @@
                android:layout_height="wrap_content"
                android:inputType="text"></EditText>
 
-           <TextView
-               android:layout_marginTop="20dp"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:text="Hora del recordatorio"
-               android:textSize="25dp"
-               />
-           <LinearLayout
-               android:layout_marginTop="10dp"
-               android:weightSum="3"
-               android:orientation="horizontal"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
 
-               <LinearLayout
-                   android:gravity="center"
-                   android:layout_weight="1"
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent">
-                   <TextView
-                       android:textSize="20dp"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:text="Cada"
-                       />
-               </LinearLayout>
-               <LinearLayout
-                   android:layout_weight="1"
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent">
-                    <EditText
-                        android:id="@+id/horaRecordatorio"
-                        android:inputType="number"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                    </EditText>
-               </LinearLayout>
-               <LinearLayout
-                   android:gravity="center"
-                   android:layout_weight="1"
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent">
-                   <TextView
-                       android:textSize="20dp"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:text="Horas"
-                       />
-               </LinearLayout>
-
-           </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
@@ -114,6 +63,19 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
              </EditText>
+           <TextView
+               android:layout_marginTop="20dp"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:text="Hora Recordatorio"
+               android:textSize="25dp"
+               />
+           <EditText
+               android:id="@+id/horaRecordatorio"
+               android:inputType="text"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
+           </EditText>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
